# AocCppBench

./: .clang-format  CMakeLists.txt
bench/: CMakeLists.txt  main.cpp
cmake/: clang-format.cmake  generate_problem.script  generate_problem_stub.script
problems/: CMakeLists.txt
problems/inc/aoc/problems/: 2015_01.h  2015_02.h  2015_03.h  2015_04.h  2015_05.h  2015_06.h  2015_07.h  2015_08.h  2015_09.h  2015_10.h  2015_11.h  2015_12.h  2015_13.h  2015_14.h  2015_15.h  2015_16.h  2015_17.h  2015_18.h  2015_19.h  2015_20.h  2015_21.h  2015_22.h  2015_23.h  2021_01.h  2021_02.h  2021_03.h  2021_04.h  2021_05.h  2021_06.h  2021_07.h  2022_01.h  2022_02.h  2022_03.h  2022_04.h  2022_05.h  2022_06.h  2022_07.h  2022_08.h  2022_09.h  2022_10.h  (+27 more)
problems/src/: 2015_01.cpp  2015_02.cpp  2015_03.cpp  2015_04.cpp  2015_05.cpp  2015_06.cpp  2015_07.cpp  2015_08.cpp  2015_09.cpp  2015_10.cpp  2015_11.cpp  2015_12.cpp  2015_13.cpp  2015_14.cpp  2015_15.cpp  2015_16.cpp  2015_17.cpp  2015_18.cpp  2015_19.cpp  2015_20.cpp  2015_21.cpp  2015_22.cpp  2015_23.cpp  2021_01.cpp  2021_02.cpp  2021_03.cpp  2021_04.cpp  2021_05.cpp  2021_06.cpp  2021_07.cpp  2022_01.cpp  2022_02.cpp  2022_03.cpp  2022_04.cpp  2022_05.cpp  2022_06.cpp  2022_07.cpp  2022_08.cpp  2022_09.cpp  2022_10.cpp  (+39 more)
solver/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/inc/aoc/: tests.h
tests/src/: 2015_01.cpp  2015_02.cpp  2015_03.cpp  2015_04.cpp  2015_05.cpp  2015_06.cpp  2015_07.cpp  2015_08.cpp  2015_09.cpp  2015_10.cpp  2015_11.cpp  2015_12.cpp  2015_13.cpp  2015_14.cpp  2015_15.cpp  2015_16.cpp  2015_17.cpp  2015_18.cpp  2015_19.cpp  2015_20.cpp  2015_21.cpp  2015_22.cpp  2015_23.cpp  2021_01.cpp  2021_02.cpp  2021_03.cpp  2021_04.cpp  2021_05.cpp  2021_06.cpp  2021_07.cpp  2022_01.cpp  2022_02.cpp  2022_03.cpp  2022_04.cpp  2022_05.cpp  2022_06.cpp  2022_07.cpp  2022_08.cpp  2022_09.cpp  2022_10.cpp  (+25 more)
